changes css file

--- a/assignment12.html
+++ b/assignment12.html
@@ -23,15 +23,16 @@
                 <div class="dash">
                     <p><span
                             style="background-color: green; color: white; padding: 5px; margin-right: 5px;">81</span>VFM
-                        Score</p>
+                        Score
+                    </p>
                 </div>
-                <ul class="list">
-                    <li>5.45"</sup><span style="color: gray;">Screen</span></li>
-                    <li>13MP <span style="color: gray;">Camera</span></li>
-                    <li>2GB <span style="color: gray;">RAM</span></li>
-                    <li>4000mAH <span style="color: gray;">Battery</span></li>
+                <ul>
+                    <li><b>5.45"</b>Screen</li>
+                    <li><b>13MP</b> Camera</li>
+                    <li><b>2GB</b> RAM</li>
+                    <li><b>4000mAh</b>Battery</li>
                 </ul>
-                <p><button id="btn">View Details</button></p>
+                <div class="btn"><button>View Details</button></div>
             </div>
             <div class="style-div">
                 <div class="div1">
@@ -42,41 +43,37 @@
                 <div class="dash">
                     <p><span
                             style="background-color: green; color: white; padding: 5px; margin-right: 5px;">90</span>VFM
-                        Score</p>
+                        Score
+                    </p>
                 </div>
-
-
-                <ul class="list">
-                    <li>5.5<sup>"</sup><span style="color: gray;">Screen</span></li>
-                    <li>Dual <span style="color: gray;">Camera</span></li>
-                    <li>4GB <span style="color: gray;">RAM</span></li>
-                    <li>3000mAH <span style="color: gray;">Battery</span></li>
+                <ul>
+                    <li><b>5.5"</b>Screen</li>
+                    <li><b>Dual</b> Camera</li>
+                    <li><b>4GB</b> RAM</li>
+                    <li><b>3000mAh</b>Battery</li>
                 </ul>
-
-                <p><button id="btn">View Details</button></p>
+                <div class="btn"><button>View Details</button></div>
             </div>
             <div class="style-div">
                 <div class="div1">
                     <img src="./images/micromax-bharat-2-plus-mobile.webp" alt="bharat-plus" />
                 </div>
-
                 <p>Micromax Bharat 2 plus</p>
                 <p><b>Rs. 2,469</b></p>
                 <p><span style="color: red;">14% </span>in last 30 days</p>
                 <div class="dash">
                     <p><span
                             style="background-color: orange; color: white; padding: 5px; margin-right: 5px;">76</span>VFM
-                        Score</p>
+                        Score
+                    </p>
                 </div>
-
-                <ul class="list">
-                    <li>4.0<sup>"</sup><span style="color: gray;">Screen</span></li>
-                    <li>5MP <span style="color: gray;">Camera</span></li>
-                    <li>1GB <span style="color: gray;">RAM</span></li>
-                    <li>1600mAH <span style="color: gray;">Battery</span></li>
+                <ul>
+                    <li><b>4.0"</b>Screen</li>
+                    <li><b>5MP</b> Camera</li>
+                    <li><b>1GB</b> RAM</li>
+                    <li><b>1600mAh</b>Battery</li>
                 </ul>
-
-                <p><button id="btn">View Details</button></p>
+                <div class="btn"><button>View Details</button></div>
             </div>
             <div class="style-div">
                 <div class="div1">
@@ -89,15 +86,16 @@
                 <div class="dash">
                     <p><span
                             style="background-color: green; color: white; padding: 5px; margin-right: 5px;">90</span>VFM
-                        Score</p>
+                        Score
+                    </p>
                 </div>
-                <ul class="list">
-                    <li>6.19<sup>"</sup><span style="color: gray;">Screen</span></li>
-                    <li>Dual <span style="color: gray;">Camera</span></li>
-                    <li>3GB <span style="color: gray;">RAM</span></li>
-                    <li>4000mAH <span style="color: gray;">Battery</span></li>
+                <ul>
+                    <li><b>5.5"19</b>Screen</li>
+                    <li><b>Dual</b> Camera</li>
+                    <li><b>3GB</b> RAM</li>
+                    <li><b>4000mAh</b>Battery</li>
                 </ul>
-                <p><button id="btn">View Details</button></p>
+                <div class="btn"><button>View Details</button></div>
             </div>
         </div>
     </main>
